# jaxparrow

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-documentation.yml  python-package.yml  python-publish.yml
docs/: alboran_sea.rst  api.md  api.rst  conf.py  duacs_alboran.rst  environment.yml  example-conf.yml  examples.rst  faq.md  gaussian_eddy.rst  index.rst  jaxparrow.cyclogeostrophy.rst  jaxparrow.grid.cgrid.rst  jaxparrow.grid.rst  jaxparrow.rst  jaxparrow.tools.geometry.rst  jaxparrow.tools.kinematics.rst  jaxparrow.tools.operators.rst  jaxparrow.tools.rst  jaxparrow.tools.sanitize.rst  nemo_alboran.rst  notebooks.rst  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  jaxparrow.cyclogeostrophy.html  jaxparrow.geostrophy.html  jaxparrow.html  jaxparrow.tools.geometry.html  jaxparrow.tools.html  jaxparrow.tools.tools.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/.doctrees/: environment.pickle  jaxparrow.cyclogeostrophy.doctree  jaxparrow.doctree  jaxparrow.geostrophy.doctree  jaxparrow.tools.doctree  jaxparrow.tools.geometry.doctree  jaxparrow.tools.tools.doctree  modules.doctree  usage.doctree
docs/_build/_sources/: index.rst.txt  jaxparrow.geostrophy.rst.txt  jaxparrow.tools.rst.txt  modules.rst.txt
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  jaxparrow.cyclogeostrophy.doctree  (+10 more)
docs/_static/: custom.css
docs/examples/: duacs.ipynb  duacs_visualisation.py  gradient_wind.ipynb  swot-enatl60.ipynb
jaxparrow/: __init__.py  __main__.py  cyclogeostrophy.py  geostrophy.py
jaxparrow/cyclogeostrophy/: __init__.py  _core.py  _fixed_point.py  _gradient_wind.py  _minimization_based.py
jaxparrow/grid/: __init__.py  cgrid.py  variable.py
jaxparrow/tools/: __init__.py  geometry.py  kinematics.py  operators.py  sanitize.py  tools.py
jaxparrow/utils/: __init__.py  geometry.py  kinematics.py  operators.py  sanitize.py
joss_paper/: paper.bib  paper.md
notebooks/: README.md  alboran_sea.ipynb  balanced_flow_fop.ipynb  balanced_flow_oop.ipynb  duacs_alboran.ipynb  duacs_alboran.md  gaussian_eddy.ipynb  gaussian_eddy.md  nemo_alboran.ipynb  nemo_alboran.md
notebooks/alboran_sea/: REAMDE.md  alboran_sea.md
notebooks/convergence/: _config.yml  _toc.yml  convergence.html  convergence.ipynb  convergence.md  convergence.py  index.md  references.bib  requirements.txt
notebooks/duacs_alboran/: duacs_alboran.md
notebooks/gaussian_eddy/: REAMDE.md  gaussian_eddy.md
notebooks/nemo_alboran/: nemo_alboran.md
paper/: paper.bib  paper.md
tests/: gaussian_eddy.py  test_velocities.py  tests.ipynb  tests.py
(+33 files in other folders)
